[gd_scene load_steps=12 format=2]

[ext_resource path="res://images/tank.png" type="Texture" id=1]
[ext_resource path="res://Tank.gd" type="Script" id=2]
[ext_resource path="res://Shell.tscn" type="PackedScene" id=3]
[ext_resource path="res://images/nuzzle.png" type="Texture" id=4]
[ext_resource path="res://VisibilityTimer.gd" type="Script" id=5]
[ext_resource path="res://images/cell.png" type="Texture" id=6]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Box.tscn" type="PackedScene" id=8]

[sub_resource type="ParticlesMaterial" id=1]
lifetime_randomness = 0.32
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 74.29
angular_velocity = 24.68
angular_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -100.0
radial_accel = 48.0
damping = 18.86
damping_random = 0.49
scale = 13.43
scale_random = 1.0
color = Color( 0.2, 0.2, 0.2, 1 )

[sub_resource type="DynamicFont" id=2]
size = 108
font_data = ExtResource( 7 )

[sub_resource type="CircleShape2D" id=3]

[node name="Tank" type="RigidBody2D" groups=[
"heavy",
"tank",
"target",
]]
position = Vector2( 200, 200 )
z_index = 1
z_as_relative = false
collision_layer = 3
collision_mask = 3
linear_damp = 8.434
angular_damp = 12.319
script = ExtResource( 2 )
Shell = ExtResource( 3 )
Box = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.180908, -5.59229 )
scale = Vector2( 0.0632796, 0.0632796 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0.180908, -5.59229 )
scale = Vector2( 0.0632796, 0.0632796 )
polygon = PoolVector2Array( 322.464, -321.282, 323.929, 470.29, 112.747, 472.049, 110.987, 336.541, -110.753, 334.781, -108.993, 468.53, -325.455, 468.53, -326.518, -319.41, -72.6606, -318.788, -72.4902, -472.628, 74.8008, -472.471, 76.0452, -320.032 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 0.16684, -38.2098 )

[node name="MuzzleFire" type="Sprite" parent="Muzzle"]
position = Vector2( -0.16684, -9.51089 )
scale = Vector2( 0.063, 0.063 )
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Muzzle/MuzzleFire"]
wait_time = 0.09
script = ExtResource( 5 )

[node name="LoadTimer" type="Timer" parent="."]
wait_time = 0.26

[node name="Life" type="Node2D" parent="."]

[node name="Low" type="Sprite" parent="Life"]
modulate = Color( 0.211765, 0.568627, 0.180392, 1 )
position = Vector2( 38.4641, 25.9182 )
scale = Vector2( -0.0707349, -0.07 )
texture = ExtResource( 6 )
offset = Vector2( 533.2, 114.558 )

[node name="Medium" type="Sprite" parent="Life"]
modulate = Color( 0.211765, 0.568627, 0.180392, 1 )
position = Vector2( 38.4609, 13.8198 )
scale = Vector2( -0.0707349, -0.07 )
texture = ExtResource( 6 )
offset = Vector2( 533.2, 114.558 )

[node name="High" type="Sprite" parent="Life"]
modulate = Color( 0.211765, 0.568627, 0.180392, 1 )
position = Vector2( 38.3301, 1.74805 )
scale = Vector2( -0.0707349, -0.07 )
texture = ExtResource( 6 )
offset = Vector2( 533.2, 114.558 )

[node name="Full" type="Sprite" parent="Life"]
modulate = Color( 0.443137, 0.443137, 0.443137, 1 )
position = Vector2( 38.512, -10.3325 )
scale = Vector2( -0.0707349, -0.07 )
texture = ExtResource( 6 )
offset = Vector2( 533.2, 114.558 )

[node name="Fade" type="Timer" parent="Life"]
wait_time = 0.728

[node name="Explosion" type="Particles2D" parent="."]
show_behind_parent = true
z_index = -1
emitting = false
amount = 50
lifetime = 2.0
one_shot = true
speed_scale = 4.52
explosiveness = 0.45
process_material = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -20.5546
margin_top = -12.1113
margin_right = 210.445
margin_bottom = 118.889
rect_scale = Vector2( 0.180955, 0.180955 )
custom_fonts/font = SubResource( 2 )
text = "200"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hide" type="Timer" parent="Label"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0.78746, -4.09473 )
zoom = Vector2( 0.15, 0.15 )

[node name="FocusTimer" type="Timer" parent="Camera2D"]
wait_time = 0.49

[node name="InitTimer" type="Timer" parent="."]
wait_time = 1.4
one_shot = true
autostart = true

[node name="Button" type="TouchScreenButton" parent="."]
position = Vector2( -32.7036, -38.7104 )
scale = Vector2( 3.27957, 3.6002 )
shape = SubResource( 3 )

[node name="MouseButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -21.3315
margin_top = -25.832
margin_right = 23.6685
margin_bottom = 21.168
rect_scale = Vector2( 0.939053, 1.05825 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Muzzle/MuzzleFire/Timer" to="Muzzle/MuzzleFire/Timer" method="_on_Timer_timeout"]
[connection signal="timeout" from="Muzzle/MuzzleFire/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="LoadTimer" to="." method="_on_LoadTimer_timeout"]
[connection signal="timeout" from="Life/Fade" to="." method="_on_Fade_timeout"]
[connection signal="timeout" from="Label/Hide" to="." method="_on_Hide_timeout"]
[connection signal="timeout" from="Camera2D/FocusTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Camera2D/FocusTimer" to="." method="_on_FocusTimer_timeout"]
[connection signal="timeout" from="InitTimer" to="." method="_on_InitTimer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_TankButton_pressed"]
[connection signal="pressed" from="MouseButton" to="." method="_on_MouseButton_pressed"]
